# FastAPI-Production-Boilerplate

./: .env.example  .gitignore  .pylintrc  LICENSE.md  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
api/v1/: __init__.py
api/v1/monitoring/: __init__.py  health.py
api/v1/monitoring/response/: __init__.py
api/v1/tasks/: __init__.py  tasks.py
api/v1/users/: __init__.py  users.py
api/v1/users/request/: __init__.py  users.py
api/v1/users/response/: __init__.py
app/controllers/: __init__.py  auth.py  task.py  user.py
app/models/: __init__.py  task.py  user.py
app/repositories/: __init__.py  task.py  user.py
app/schemas/responses/: tasks.py  users.py
core/: config.py  server.py
core/cache/: cache_manager.py  custom_key_maker.py  redis_backend.py
core/controller/: base.py
core/database/: __init__.py  session.py  transactional.py
core/factory/: factory.py
core/fastapi/dependencies/: authentication.py  current_user.py  permissions.py
core/fastapi/middlewares/: __init__.py  response_logger.py
core/repository/: base.py
core/security/: __init__.py  access_control.py  jwt.py
migrations/: env.py
migrations/versions/: 20230205035620_initial_models.py
tests/: conftest.py
tests/api/: conftest.py  overrides.py
tests/api/v1/monitoring/: test_health.py
tests/api/v1/tasks/: test_tasks.py
tests/api/v1/users/: test_users.py
tests/core/repository/: test_base.py
tests/core/security/: test_access_control.py  test_jwt_handler.py  test_password.py
tests/factory/: tasks.py  users.py
tests/utils/: login.py
worker/: __init__.py
