[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "FastAPI Boilerplate"
authors = ["Abbas <me@abbasmj.com>"]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.9.2"
SQLAlchemy = "^2.0.1"
PyJWT = "^2.4.0"
uvicorn = "^0.18.3"
fastapi = "^0.89.1"
celery = "^5.2.7"
gunicorn = "^20.1.0"
fastapi-event = "^0.1.3"
ujson = "^5.4.0"
click = "^8.1.3"
greenlet = "1.1.3"
redis = "^4.3.4"
pydantic = "^1.10.4"
isort = "^5.12.0"
black = "^23.1.0"
pylint = "^2.16.1"
asyncpg = "^0.27.0"
pytest = "^7.2.1"
httpx = "^0.23.3"
pyyaml = "^6.0"
email-validator = "^1.3.1"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"

[tool.poetry.group.dev.dependencies]
black = {version = "^23.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
